--- a/Provision copy.ipynb
+++ b/Provision copy.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\timom\\AppData\\Local\\Temp\\ipykernel_14684\\773332271.py:2: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\timom\\AppData\\Local\\Temp\\ipykernel_8576\\773332271.py:2: DtypeWarning: Columns (35) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv('./data/openpowerlifting.csv')\n"
      ]
     },
@@ -242,7 +242,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,14 +416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\timom\\AppData\\Local\\Temp\\ipykernel_14684\\1757496781.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\timom\\AppData\\Local\\Temp\\ipykernel_8576\\1757496781.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -698,6 +698,9 @@
     }
    ],
    "source": [
+    "# Filter records where 'Age' is missing\n",
+    "missing_age_data = data[data['Age'].isna()]\n",
+    "\n",
     "# Count the number of records with filled and missing 'AgeClass' fields\n",
     "filled_age_class_count = missing_age_data['AgeClass'].notna().sum()\n",
     "missing_age_class_count = missing_age_data['AgeClass'].isna().sum()\n",
@@ -745,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +913,7 @@
        "5        135.0        145.0            145.0  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +969,7 @@
        "(515139, 497884, 17255)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,10 +1003,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Removing NA data\n",
     "cleaned_data = cleaned_data[\n",
     "    (cleaned_data[['BodyweightKg', 'Best3SquatKg', 'Best3BenchKg', 'Best3DeadliftKg']] >= 0).all(axis=1) &\n",
     "    cleaned_data[['BodyweightKg', 'Sex', 'Best3SquatKg', 'Best3BenchKg', 'Best3DeadliftKg']].notna().all(axis=1)\n",
@@ -1024,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1033,16 +1037,23 @@
        "42946"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Define a mapping from text to integers\n",
+    "sex_mapping = {'F': 0, 'M': 1}\n",
+    "\n",
+    "# Use the map function to transform the 'Sex' column\n",
+    "cleaned_data['Sex'] = cleaned_data['Sex'].map(sex_mapping)\n",
+    "\n",
+    "# Filtering on bodyweight and sex\n",
     "filtered_data = cleaned_data[\n",
     "    (cleaned_data['BodyweightKg'] >= 68) &\n",
     "    (cleaned_data['BodyweightKg'] <= 75) &\n",
-    "    (cleaned_data['Sex'] == 'M')\n",
+    "    (cleaned_data['Sex'] == 1)\n",
     "]\n",
     "\n",
     "individual_count = filtered_data.shape[0]\n",
