--- a/Prediction.ipynb
+++ b/Prediction.ipynb
@@ -1,10 +1,44 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Sex   Age  BodyweightKg AgeClass  Squat1Kg  Squat2Kg  Squat3Kg  \\\n",
+      "0    1  19.0          73.1    18-19     210.0    -220.0    -220.0   \n",
+      "1    1  28.0          74.9    24-34     190.0     200.0     210.0   \n",
+      "2    1  19.0          74.1    18-19     150.0     160.0     165.0   \n",
+      "3    1  25.0          74.2    24-34     255.0     275.0     290.0   \n",
+      "4    1  21.0          74.9    20-23     200.0     217.5    -225.0   \n",
+      "\n",
+      "   Best3SquatKg  Bench1Kg  Bench2Kg  Bench3Kg  Best3BenchKg  Deadlift1Kg  \\\n",
+      "0         210.0    -120.0    -120.0     120.0         120.0       -250.0   \n",
+      "1         210.0     135.0     140.0     142.5         142.5        250.0   \n",
+      "2         165.0     125.0    -132.5     135.0         135.0        225.0   \n",
+      "3         290.0     160.0     170.0     175.0         175.0        270.0   \n",
+      "4         217.5     110.0     120.0    -127.5         120.0        217.5   \n",
+      "\n",
+      "   Deadlift2Kg  Deadlift3Kg  Best3DeadliftKg  \n",
+      "0       -250.0        250.0            250.0  \n",
+      "1       -265.0       -270.0            250.0  \n",
+      "2       -240.0        240.0            240.0  \n",
+      "3        285.0       -295.0            285.0  \n",
+      "4        232.5        242.5            242.5  \n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -15,98 +49,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 42946 entries, 0 to 42945\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   Sex              42946 non-null  int64  \n",
+      " 1   Age              42946 non-null  float64\n",
+      " 2   BodyweightKg     42946 non-null  float64\n",
+      " 3   AgeClass         42936 non-null  object \n",
+      " 4   Squat1Kg         23772 non-null  float64\n",
+      " 5   Squat2Kg         23566 non-null  float64\n",
+      " 6   Squat3Kg         22990 non-null  float64\n",
+      " 7   Best3SquatKg     42946 non-null  float64\n",
+      " 8   Bench1Kg         23769 non-null  float64\n",
+      " 9   Bench2Kg         23585 non-null  float64\n",
+      " 10  Bench3Kg         22876 non-null  float64\n",
+      " 11  Best3BenchKg     42946 non-null  float64\n",
+      " 12  Deadlift1Kg      23788 non-null  float64\n",
+      " 13  Deadlift2Kg      23489 non-null  float64\n",
+      " 14  Deadlift3Kg      22442 non-null  float64\n",
+      " 15  Best3DeadliftKg  42946 non-null  float64\n",
+      "dtypes: float64(14), int64(1), object(1)\n",
+      "memory usage: 5.2+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "print(data.info())\n",
     "data = data.dropna(subset=['Age', 'BodyweightKg', 'Best3SquatKg'])\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "\n",
-    "# Preparing the data\n",
-    "X = data[['Age', 'BodyweightKg']]\n",
-    "y = data['Best3SquatKg']\n",
-    "\n",
-    "# Splitting the dataset into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Function to train and evaluate a model\n",
-    "def train_and_evaluate_model(model, X_train, X_test, y_train, y_test):\n",
-    "    model.fit(X_train, y_train)\n",
-    "    predictions = model.predict(X_test)\n",
-    "    mse = mean_squared_error(y_test, predictions)\n",
-    "    print(f'Model: {model.__class__.__name__}, MSE: {mse}')\n",
-    "\n",
-    "# Models to train\n",
-    "models = [LinearRegression(), Ridge(), Lasso(), DecisionTreeRegressor()]\n",
-    "\n",
-    "# Train and evaluate each model\n",
-    "for model in models:\n",
-    "    train_and_evaluate_model(model, X_train, X_test, y_train, y_test)\n"
+    "## Polynomal Regression\n",
+    "Polynomial regression is a form of linear regression in which the relationship between the independent variable xx and the dependent variable yy is modeled as an nth degree polynomial. Unlike simple linear regression, which models the relationship as a straight line, polynomial regression can fit a wide range of curvature in the data. This flexibility makes it particularly useful for modeling datasets where the relationship between variables is not linear but still follows a specific trend."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from math import sqrt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeRegressor, plot_tree\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "features = data[['Age', 'BodyweightKg']]\n",
-    "target = data['Best3SquatKg']\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Pruning the tree by setting max_depth\n",
-    "tree_model = DecisionTreeRegressor(max_depth=5, random_state=42)\n",
-    "tree_model.fit(X_train, y_train)\n",
-    "\n",
-    "predictions = tree_model.predict(X_test)\n",
-    "rmse = sqrt(mean_squared_error(y_test, predictions))\n",
-    "print(f'Root Mean Squared Error: {rmse}')\n",
-    "\n",
-    "# Visualize the tree (simplified)\n",
-    "plt.figure(figsize=(20,10))\n",
-    "plot_tree(tree_model, feature_names=['Age', 'BodyweightKg'], filled=True, max_depth=3)\n",
-    "plt.show()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1851.8136554598761, 0.21169797125852907)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-    "\n",
-    "# Assuming 'data' is your DataFrame\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
     "features = data[['Age', 'BodyweightKg']]\n",
     "target = data['Best3SquatKg']\n",
     "\n",
     "# Splitting the data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.2)\n",
     "\n",
     "# Generating polynomial features\n",
     "poly_degree = 2\n",
@@ -120,20 +137,122 @@
     "poly_model.fit(X_train_poly, y_train)\n",
     "\n",
     "# Making predictions and evaluating the model\n",
-    "predictions = poly_model.predict(X_test_poly)\n",
+    "y_pred = poly_model.predict(X_test_poly)\n",
     "\n",
-    "# Evaluation metrics\n",
-    "rmse = sqrt(mean_squared_error(y_test, predictions))\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "(mse, r2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random Forest Regressor\n",
+    "Random Forest is an ensemble learning method, particularly effective for regression tasks. It operates by constructing multiple decision trees during training and outputting the mean or average prediction of the individual trees. This approach helps in reducing overfitting, a common problem in decision tree models, and improves the predictive accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1967.8554929201362, 0.16668992180686082)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# Define the features and the target\n",
+    "X = data[['Age', 'BodyweightKg']]\n",
+    "y = data['Best3SquatKg']\n",
+    "\n",
+    "# Spliting the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Initialize the Random Forest Regressor\n",
+    "rf_regressor = RandomForestRegressor(n_estimators=100)\n",
+    "\n",
+    "# Train the model\n",
+    "rf_regressor.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_pred = rf_regressor.predict(X_test)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "(mse, r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MLP Regression\n",
+    "MLP Regression refers to the application of a Multi-Layer Perceptron, a class of feedforward artificial neural network, to regression tasks. MLP consists of multiple layers of nodes, simulating a biological neural network, which makes it highly effective in capturing complex and non-linear relationships in data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1888.5484390330334, -0.405650396469478)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "\n",
+    "X = data[['Age', 'BodyweightKg']]\n",
+    "y = data['Best3SquatKg']\n",
+    "\n",
+    "# Splitting the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "\n",
+    "# Create the MLPRegressor model\n",
+    "model = MLPRegressor(hidden_layer_sizes=(200, 200, 200), activation='relu', \n",
+    "                     solver='adam', max_iter=500, random_state=1)\n",
+    "\n",
+    "# Fit the model\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "# Calculate Mean Squared Error\n",
     "mse = mean_squared_error(y_test, predictions)\n",
-    "mae = mean_absolute_error(y_test, predictions)\n",
-    "r2 = r2_score(y_test, predictions)\n",
+    "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "# Print the report\n",
-    "print(f\"Evaluation Metrics for Polynomial Regression (Degree {poly_degree}):\")\n",
-    "print(f\"Root Mean Squared Error (RMSE): {rmse:.2f}\")\n",
-    "print(f\"Mean Squared Error (MSE): {mse:.2f}\")\n",
-    "print(f\"Mean Absolute Error (MAE): {mae:.2f}\")\n",
-    "print(f\"R-squared (R²): {r2:.2f}\")"
+    "(mse, r2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "It appears that the models I've experimented with aren't performing as expected. Despite various attempts and configurations, the accuracy remains unsatisfactorily low, and the last model even yielded a negative R² score, which suggests there might be some issues in my approach. This leads me to believe that our current dataset might be insufficient for accurate predictions. Incorporating additional features, such as muscle mass, nutritional habits, and body length, could potentially enhance the model's predictive power and provide a more comprehensive understanding of the factors influencing the outcomes."
    ]
   }
  ],
@@ -153,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
