--- a/Provision.ipynb
+++ b/Provision.ipynb
@@ -633,7 +633,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see above I tried to visualize how age affects the best attempts by the contistants. For me it looks like all 3 exercises have roughly the same curve with few exceptions. Also I noticed that the average for the best squat is significantly higher than the other exercises."
+    "As you can see above I tried to visualize how age affects the best attempts by the contistants. For me it looks like all 3 exercises have roughly the same curve with few exceptions. Also I noticed that the average for the best squat is significantly higher than the other exercises. Although it is good to note that this graph does not give a accurate representation of the data. All we can see is the maximum and minimum a certain age group lifts. We can not draw any conclusions on where the mean lift lies for a certain age, because there might me multiple dots overlapping in certain areas there might even be hundereds of dots overlapping. Therefor I have decided to make a version of this chart for also showing the amount of dots in the area."
    ]
   },
   {
@@ -929,11 +929,6 @@
     "\n",
     "initial_missing_age_count, removed_due_to_missing_ageclass, ages_imputed_count\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
