--- a/Prediction.ipynb
+++ b/Prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
    ],
    "source": [
     "print(data.info())\n",
-    "data = data.dropna(subset=['Age', 'BodyweightKg', 'Best3SquatKg'])\n"
+    "data = data.dropna(subset=['Age', 'BodyweightKg', 'Best3SquatKg'])"
    ]
   },
   {
@@ -98,16 +98,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mean Squared Error (MSE)</td>\n",
+       "      <td>1797.268199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>R-squared (R²)</td>\n",
+       "      <td>0.214059</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(1851.8136554598761, 0.21169797125852907)"
+       "                     Metric        Value\n",
+       "0  Mean Squared Error (MSE)  1797.268199\n",
+       "1            R-squared (R²)     0.214059"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +182,13 @@
     "mse = mean_squared_error(y_test, y_pred)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "(mse, r2)\n"
+    "# Creating a DataFrame to display the values\n",
+    "error_metrics = pd.DataFrame({\n",
+    "    \"Metric\": [\"Mean Squared Error (MSE)\", \"R-squared (R²)\"],\n",
+    "    \"Value\": [mse, r2]\n",
+    "})\n",
+    "\n",
+    "error_metrics\n"
    ]
   },
   {
@@ -155,16 +201,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1967.8554929201362, 0.16668992180686082)"
+       "(1884.4420701156012, 0.17551183091425093)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +238,13 @@
     "mse = mean_squared_error(y_test, y_pred)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "(mse, r2)"
+    "# Creating a DataFrame to display the values\n",
+    "error_metrics = pd.DataFrame({\n",
+    "    \"Metric\": [\"Mean Squared Error (MSE)\", \"R-squared (R²)\"],\n",
+    "    \"Value\": [mse, r2]\n",
+    "})\n",
+    "\n",
+    "error_metrics\n"
    ]
   },
   {
@@ -205,16 +257,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1888.5484390330334, -0.405650396469478)"
+       "(1805.5464686223825, -0.4065978150029137)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +295,13 @@
     "mse = mean_squared_error(y_test, predictions)\n",
     "r2 = r2_score(y_test, y_pred)\n",
     "\n",
-    "(mse, r2)"
+    "# Creating a DataFrame to display the values\n",
+    "error_metrics = pd.DataFrame({\n",
+    "    \"Metric\": [\"Mean Squared Error (MSE)\", \"R-squared (R²)\"],\n",
+    "    \"Value\": [mse, r2]\n",
+    "})\n",
+    "\n",
+    "error_metrics\n"
    ]
   },
   {
@@ -252,7 +310,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "It appears that the models I've experimented with aren't performing as expected. Despite various attempts and configurations, the accuracy remains unsatisfactorily low, and the last model even yielded a negative R² score, which suggests there might be some issues in my approach. This leads me to believe that our current dataset might be insufficient for accurate predictions. Incorporating additional features, such as muscle mass, nutritional habits, and body length, could potentially enhance the model's predictive power and provide a more comprehensive understanding of the factors influencing the outcomes."
+    "It appears that the models I've experimented with aren't performing as expected. Despite various attempts and configurations, the accuracy remains unsatisfactorily low, and the last model even yielded a negative R² score, which suggests there might be some issues in my approach. This leads me to believe that our current dataset might be insufficient for accurate predictions. Incorporating additional features, such as muscle mass, nutritional habits, and body length, could potentially enhance the model's predictive power and provide a more comprehensive understanding of the factors influencing the outcomes. Other ways could be to use Grid Search or Random Search for hyperparameter tuning to improve the models."
    ]
   }
  ],
@@ -272,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
